@@ -1,3 +1,8 @@
+2004-05-07  Stefan Jahn  <stefan@lkcc.org>
+
+	* microstrip/msline.cpp: Added dispersion terms, dielectrical
+	and conductor losses for the microstrip line.
+
 2004-05-06  Stefan Jahn  <stefan@lkcc.org>
 
 	* microstrip/msline.cpp (analyseZ0): Implemented a function
